MB-25047 Explicitly shutdown logger before memcached returns from main

Previously the logger was not explicitly shutdown by main. The file
logger (the only logger requiring a proper shutdown was instead
shutdown through use of std::atexit. This caused issues when the
file logger thread exited as it was possible for phosphor to be
deinitialised before the file logger thread could deregister itself
from phosphor due to the static deinitialisation order rules. This
could cause a SEGV during program termination due to phosphor data
structures being freed.

Change-Id: I377f3abe5214012e3f2b3676059250a3a27a168b
Reviewed-on: http://review.couchbase.org/81608
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>